changed location and display rules of the last edited caption in descriptions and issue history; fixed alignment of issue history links
git-svn-id: svn+ssh://svn.code.sf.net/p/webissues/code/trunk/server@2180 c8fa975d-6fd4-4e76-b3b8-1a99b2ee3549

--- a/common/theme/style.css
+++ b/common/theme/style.css
@@ -486,6 +486,17 @@ ul.changes {
   margin-bottom: 0.75em;
 }
 
+.edited {
+  font-size: 8pt;
+  font-weight: normal;
+  color: #888888;
+}
+
+.history-links {
+  float: right;
+  margin-top: -2px
+}
+
 .comment-text {
   padding: 0.5em;
   white-space: pre-wrap;
